--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".cthread.ThreadTestActivity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +48,7 @@
         </activity>
         <activity android:name=".NativeRenderActivity" />
         <activity android:name=".audioplay.AudioPlayActivity" />
-        <activity android:name=".opensles.OpenslesActivity"></activity>
+        <activity android:name=".opensles.OpenslesActivity" />
     </application>
 
 </manifest>
